...
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/favorite"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_baseline_favorite_24"
        app:tint="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
...
